feat: excluir parecer e adicionar tipo de  pedidos
