# backend/src/main/java/br/pucminas/aluguelcarros/controller/PedidoController.java
@@ -1,23 +1,17 @@
 package br.pucminas.aluguelcarros.controller;
 
-import br.pucminas.aluguelcarros.dto.request.PedidoRequestDTO;
+import br.pucminas.aluguelcarros.dto.request.PedidoAluguelRequestDTO;
+import br.pucminas.aluguelcarros.dto.request.PedidoCompraRequestDTO;
 import br.pucminas.aluguelcarros.dto.response.AuthMeResponseDTO;
-import br.pucminas.aluguelcarros.dto.response.ContratoResponseDTO;
 import br.pucminas.aluguelcarros.dto.response.PedidoResponseDTO;
-import br.pucminas.aluguelcarros.enums.UserType;
-import br.pucminas.aluguelcarros.exception.RegraDeNegocioException;
-import br.pucminas.aluguelcarros.facade.ContratoFacade;
 import br.pucminas.aluguelcarros.facade.PedidoFacade;
 import br.pucminas.aluguelcarros.service.AuthService;
 import io.micronaut.http.HttpRequest;
-import io.micronaut.http.HttpResponse;
 import io.micronaut.http.annotation.Body;
 import io.micronaut.http.annotation.Controller;
-import io.micronaut.http.annotation.Delete;
 import io.micronaut.http.annotation.Get;
 import io.micronaut.http.annotation.PathVariable;
 import io.micronaut.http.annotation.Post;
-import io.micronaut.http.annotation.Put;
 import jakarta.inject.Inject;
 import jakarta.validation.Valid;
 
@@ -27,21 +21,23 @@ import java.util.List;
 public class PedidoController {
 
     private final PedidoFacade pedidoFacade;
-    private final ContratoFacade contratoFacade;
     private final AuthService authService;
 
     @Inject
     public PedidoController(PedidoFacade pedidoFacade,
-                            ContratoFacade contratoFacade,
                             AuthService authService) {
         this.pedidoFacade = pedidoFacade;
-        this.contratoFacade = contratoFacade;
         this.authService = authService;
     }
 
-    @Post
-    public PedidoResponseDTO cadastrar(@Body @Valid PedidoRequestDTO dto) {
-        return pedidoFacade.cadastrar(dto);
+    @Post("/aluguel")
+    public PedidoResponseDTO cadastrarAluguel(@Body @Valid PedidoAluguelRequestDTO dto) {
+        return pedidoFacade.cadastrarAluguel(dto);
+    }
+
+    @Post("/credito")
+    public PedidoResponseDTO cadastrarCompra(@Body @Valid PedidoCompraRequestDTO dto) {
+        return pedidoFacade.cadastrarCompra(dto);
     }
 
     @Get("/me")
@@ -59,12 +55,6 @@ public class PedidoController {
     private AuthMeResponseDTO obterPerfilAutenticado(HttpRequest<?> request) {
         String authorization = request.getHeaders().getAuthorization().orElse("");
         return authService.obterPerfilAutenticado(authorization);
-    }
-
-    private void validarPerfilAgente(UserType userType) {
-        if (userType != UserType.BANCO && userType != UserType.EMPRESA) {
-            throw new RegraDeNegocioException("Somente empresa ou banco pode executar contrato.");
-        }
     }
 }
 
